--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 Revision history for Perl module Math::NV
 
 0.04
-
+    - Minor rewrite of _ld2binary and _ld_str2binary to work with doubles
+      as well as long doubles
+    - Add bin2val function
 0.03
     - Add t/10exponent_0_to_12.t.
     - Define PERL_NO_GET_CONTEXT.
