--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl module Math::NV
 
 0.06
+    - Accommodate nvtype of __float128
+    - Remove the 2nd arg (flag) from ld2binary() and ld_str2binary(). (Now takes
+      only one argument.)
 
 0.05
     - Add extra diagnostics to t/07ld2binary.t in an attempt to determine
