--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for Perl module Math::NV
     - Accommodate nvtype of __float128
     - Remove the 2nd arg (flag) from ld2binary() and ld_str2binary(). (Now takes
       only one argument.)
+    - In t/07ld2binary.t, attempt to make allowances for locale settings of
+      decimal point.
 
 0.05
     - Add extra diagnostics to t/07ld2binary.t in an attempt to determine
