--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ Revision history for Perl module Math::NV
       only one argument.)
     - In t/07ld2binary.t, attempt to make allowances for locale settings of
       decimal point.
+    - Add t/07ld2binary_doubledouble.t
 
 0.05
     - Add extra diagnostics to t/07ld2binary.t in an attempt to determine
