--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl module Math::NV
 
 0.07
+    - Make corrections to POD documentation.
 
 0.06
     - Accommodate nvtype of __float128
