--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Perl module Math::NV
  1.01
+    - Correct tests in t/07nv_mpfr.t.
 
  1.0
     - Add nv_mpfr() and is_eq_mpfr() functions. (Also added $Math::NV::no_mpfr.)
