--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 Revision history for Perl module Math::NV
+ 1.03
+
  1.02
     - Update nv_mpfr() to accommodate IEEE 754 quad long double type.
-    - Small alteration to output of is_eq() and is_eq_mpfr(). (IN the
+    - Small alteration to output of is_eq() and is_eq_mpfr(). (In the
       event of discrepancy, they now identify which value belongs to
       which method.)
 
