--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module Math::NV
  2.01
+    - Fix bug in test 7 of t/08subnormal_mpfr.t and t/09subnormal_mpfr_alt.t
+      Bug exposed by:
+      http://www.cpantesters.org/cpan/report/2d66ef6c-19fc-11e9-9376-4c7cbe00b72a
 
  2.0
     - Move POD to separate file (NV.pod)
