--- a/NV.pod
+++ b/NV.pod
@@ -203,7 +203,7 @@ Math::NV - compare the NV values that perl assigns with C and MPFR
 
    This program is free software; you may redistribute it and/or modify
    it under the same terms as Perl itself.
-   Copyright 2013-16, 2018 Sisyphus
+   Copyright 2013-16, 2018-19 Sisyphus
 
 
 =head1 AUTHOR
