--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Perl module Math::NV
  2.02
+    - Remove "Perl_strtod" from NV.xs.
 
  2.01
     - Require version 4.07 of Math::MPFR as Math-MPFR-4.07 altered the way
