--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl module Math::NV
  2.03
+    - "use constant" to replace $Math::NV::mpfr_strtofr_bug with MPFR_STRTOFR_BUG
+       and to replace $Math::NV::_ld_subnormal_bug with LD_SUBNORMAL_BUG
 
  2.02
     - Remove "Perl_strtod" from NV.xs.
