--- a/NV.pod
+++ b/NV.pod
@@ -35,6 +35,10 @@ Math::NV - compare the NV values that perl assigns with C and MPFR
      Else returns false - which implies that either perl or C is buggy
      in its assignment of that value. (Or they could both be buggy.)
 
+     When is_eq() returns false, the 2 differing values are by
+     default printed to STDOUT (in hex). To disable this behaviour
+     set $Math::NV::no_warn to 2.
+
    $ternary = is_inexact($str); # requires mpfr-3.1.6
      If $ternary is 0, then the value specified by $str is exactly
      representable by an NV.
@@ -49,8 +53,12 @@ Math::NV - compare the NV values that perl assigns with C and MPFR
 
      Returns true if the value perl assigns from the string $str is
      equal to the value mpfr assigns from the same string. If the
-     string represents a subnormal value we first subnormalize the
-     mpfr value before comparing the two values.
+     string represents a subnormal value then the mpfr value is
+     subnormalised before comparison is made.
+
+     When is_eq_mpfr() returns false, the 2 differing values are by
+     default printed to STDOUT (in hex). To disable this behaviour
+     set $Math::NV::no_warn to 2.
 
 
    $nv = nv($str);        # scalar context
@@ -91,12 +99,6 @@ Math::NV - compare the NV values that perl assigns with C and MPFR
     Valid values for $bits are 53 (double), 64 (80-bit extended
     precision long double), 106 (double-double) and 113 (128-bit quad
     long double or __float128). Other values will cause an error.
-    If $bits is set to 113, the string will be treated as a 128-bit
-    IEEE 754 long double iff $Math::MPFR::VERSION >= 3.33 &&
-    $Config{longdblkind} is either 1 or 2. Otherwise the value of 113
-    will be taken to indicate __float128, though this is not
-    necessarily correct when $Math::MPFR::VERSION is less than 3.33 or
-    the version of perl itself is less than 5.22.
 
     Uses the mpfr library to assign the value represented by $str as a
     double or long double or double-double or __float128 (as determined
@@ -200,8 +202,7 @@ Math::NV - compare the NV values that perl assigns with C and MPFR
     Initially set to 0 - which means that if either nv(), nv_mpfr(),
     is_eq() or is_eq_mpfr() are handed an argument that is not a string,
     then a warning will be emitted.
-    To disable this warning, simply assign 1 (or any other true numeric
-    value) to this variable.
+    To disable this warning, simply set this variable to 1.
     Set to 2 to disable output of the 2 non-matching values when is_eq()
     or is_eq_mpfr() return false.
     Set to 3 to disable both of the above warnings.
