--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl module Math::NV
  2.04
-    - Remove all occurrences of "scalar reverse" from NV.pm and NV.pod
+    - Remove all occurrences of "scalar reverse" from NV.pm, NV.pod,
+      t/08subnormal_mpfr.t and t/09subnormal_mpfr_alt.t
 
  2.03
     - "use constant" to replace $Math::NV::mpfr_strtofr_bug with MPFR_STRTOFR_BUG
