--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl module Math::NV
 
  2.04
+    - Add cmp_2 (new function).
     - Remove all occurrences of "scalar reverse" from NV.pm, NV.pod,
       t/08subnormal_mpfr.t and t/09subnormal_mpfr_alt.t
     - Having removed all of those instances of "scalar reverse", I subsequently
