--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@ Revision history for Perl module Math::NV
       of that same bugginess, these perls are now also excluded from running
       t/08subnormal_mpfr.t and t/09subnormal_mpfr_alt.t. (Some bugs call for
       more fucking about than even I am prepared to tolerate.)
+    - Enable building on Cygwin -Dusequadmath perls. (Add '-lquadmath' link to LIBS.)
 
  2.03
     - "use constant" to replace $Math::NV::mpfr_strtofr_bug with MPFR_STRTOFR_BUG
