--- a/Changes
+++ b/Changes
@@ -1,9 +1,9 @@
 Revision history for Perl module Math::NV
 
  2.05
-    - Add rehex_ld80 function. (Enables one to view both perl's hex formatting
-      of 80-bit long doubles and the mpfr library's hex formatting of the same
-      value.)
+    - Add hex_alt function. (Enables one to view both perl's "%a"(or "%A")
+      formatting of NVs, and the mpfr library's "%a"(or"%A") formatting of
+      the same value.)
 
  2.04
     - Add cmp_2 (new function).
